2010-04-27  Benoit Grégoire <benoitg@coeus.ca>
	* Patch by ajseward with some additional fixes to allow wraping the library in python. 

2009-05-09  Benoit Grégoire <benoitg@coeus.ca>
	* Various C++ include fixes for building with recent compilers.  Patch by Bill Nottingham <notting@redhat.com>

2009-02-09  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Release 0.9.1 with the bugfix for gnucash

2008-12-06  Christian Stimming  <stimming@tuhh.de>

	* lib/ofx_preproc.cpp: Add more sanity checks on string length. I
	forgot the bug which required those to be fixed, but I fixed them
	anyway.

	* lib/ofx_preproc.cpp: Fix gnucash crash on OFX files with
	non-ascii characters and very long lines. See
	http://bugzilla.gnome.org/show_bug.cgi?id=528306 and
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=493597. Patch was
	copied from the latter. Patch by Jerome Vouillon.

20/11/2007 Martin Preuss <martin@aquamaniac.de>
	* updated specfile


19/11/2007 Martin Preuss <martin@aquamaniac.de>
	* Release 0.9.0


12/11/2007 Martin Preuss <martin@aquamaniac.de>
	* ofx_preproc.cpp: Increased size of file name buffer (50 was too
          small)


28/9/2007 Martin Preuss <martin@aquamaniac.de>
        * libofx.h: added some fields to OfxFiLogin:
          - header_version
          - appid
          - appver
          It seems to become necessary with some new servers to modify
          these fields by the application.
          
27/9/2007 Martin Preuss <martin@aquamaniac.de>
	* ofx_request_statement.cpp: Incremented versions written to the
          request
        * libofx.h, ofx_utilities.cpp: replaced some char* with "const char*" to make GCC happy,
          wrapped arithmetic calculations in macro definitions in brackets
          to avoid mathematical problems
        * libofx.h: Removed this file, replaced it with libofx.h.in. This
          is used to create libofx.h which now includes some subst variables